--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -85,25 +85,30 @@
         <div class="pt-3">
           <nav class="grid gap-y-7">
             {% for link in linklists['main-menu'].links %}
+              {% assign link_handle = link.handle | replace: '-', '_' %}
               {% if link.links != blank %}
-                <div class="relative">
+                <div x-data="{ {{ link_handle }} : false }" class="relative">
                   <button
+                    x-on:click="{{ link_handle }} = ! {{ link_handle }}"
                     type="button"
                     class="text-base text-gray-500 hover:text-gray-900 flex items-center justify-between w-full"
                   >
-                    <div>{{ link.title }}</div>
+                    <div>
+                      {{ link.title }}
+                    </div>
+                    {% render 'icon-dropdown' %}
                   </button>
 
-                  {% for sublink in link.links %}
-                    <div class="grid gap-y-7 py-3">
+                  <div x-show="{{ link_handle }}" class="grid gap-y-7 py-3">
+                    {% for sublink in link.links %}
                       <a
                         href="#"
                         class="-m-3 p-3 mt-2 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50"
                       >
                         <span class="ml-3 text-base font-medium text-gray-500">{{ sublink.title }}</span>
                       </a>
-                    </div>
-                  {% endfor %}
+                    {% endfor %}
+                  </div>
                 </div>
               {% else %}
                 <a
