--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,3 +1,7 @@
+{% assign main_menu_linklist = linklists[section.settings.menu].links %}
+<script>
+  console.log({{ main_menu_linklist  }})
+</script>
 <div class="relative bg-white" x-data="{ mobileMenuOpen: true }">
   <div class="mx-auto px-4 sm:px-6">
     <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
@@ -18,7 +22,7 @@
 
       <!-- NAVIGATION MENU -->
       <nav x-data="{open: false}" class="hidden md:flex space-x-10">
-        {% for link in linklists['main-menu'].links %}
+        {% for link in main_menu_linklist %}
           {% if link.links != blank %}
             <div class="relative">
               <button
@@ -72,7 +76,7 @@
         <!-- MOBILE MENU HEADER TITLE PLUS CLOSE BUTTON -->
         <div class="flex items-center justify-between pb-3">
           <div>
-            <h1 class="text-lg text-gray-500">{{ shop.name }}</h1>
+            <h1 class="text-lg text-gray-500">{{ section.settings.mobile_menu_title }}</h1>
           </div>
           <div class="-mr-2">
             <button type="button" x-on:click="mobileMenuOpen = false" class="bg-white rounded-md p-2 text-gray-500">
@@ -84,7 +88,7 @@
         <!-- NAVIGATION LINKS FOR MOBILE MENU -->
         <div class="pt-3">
           <nav class="grid gap-y-7">
-            {% for link in linklists['main-menu'].links %}
+            {% for link in main_menu_linklist %}
               {% assign link_handle = link.handle | replace: '-', '_' %}
               {% if link.links != blank %}
                 <div x-data="{ {{ link_handle }} : false }" class="relative">
@@ -132,3 +136,24 @@
     </div>
   </div>
 </div>
+
+{% schema %}
+{
+  "name": "Header",
+  "settings": [
+    {
+      "type": "text",
+      "id": "mobile_menu_title",
+      "label": "Title",
+      "default": "Header Title",
+      "info": "This is the title for the mobile menu"
+    },
+    {
+      "type": "link_list",
+      "id": "menu",
+      "label": "Header Menu",
+      "default": "main-menu"
+    }
+  ]
+}
+{% endschema %}
