--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,4 +1,4 @@
-<article>
+<article itemscope itemtype="http://schema.org/BlogPosting">
   {% for block in section.blocks %}
     {% case block.type %}
       {% when 'article_title' %}
@@ -26,12 +26,30 @@
 {% if blog.comments_enabled? %}
   <div id="comments">
     {% if article.comments_count > 0 %}
+      <div>
+        {% paginate article.comments by 2 %}
+          {% for comment in article.comments %}
+            {{ comment.content }} by {{ comment.author }}
+          {% endfor %}
+          {% if paginate.pages > 1 %}
+            {{ paginate | default_pagination }}
+          {% endif %}
+        {% endpaginate %}
+      </div>
     {% else %}
       There are no comments here!
     {% endif %}
   </div>
   <div id="comment-form">
     {% form 'new_comment', article %}
+      {% if form.errors %}
+        Errors in the comment!
+        {% for error in form.errors %}
+          {{ form.errors.messages[error] | capitalize }}
+        {% endfor %}
+      {% elsif form.posted_successfully? %}
+        Comment is posted successfully
+      {% endif %}
       <div>
         <label for="comment_author">Name</label>
         <input type="text" name="comment[author]" id="comment_author" class="border" required>
@@ -44,7 +62,7 @@
         <label for="comment_content">Comment</label>
         <textarea name="comment[body]" id="comment_content" class="border" required> </textarea>
       </div>
-      <button>Submit comment</button>
+      <button type="submit">Submit comment</button>
     {% endform %}
   </div>
 {% endif %}
