--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -1,3 +1,17 @@
 {% if pagination.pages > 0 %}
-  G'day
+  <nav role="navigation">
+    {% if pagination.previous %}
+      <a href="{{ pagination.previous.url }}">{{ pagination.previous.title }}</a>
+    {% endif %}
+    {% for part in pagination.parts %}
+      {% if part.is_link %}
+        <a href="{{ part.url }}">{{ part.title }}</a>
+      {% else %}
+        <span href="{{ part.url }}">{{ part.title }}</span>
+      {% endif %}
+    {% endfor %}
+    {% if pagination.next %}
+      <a href="{{ pagination.next.url }}">{{ pagination.next.title }}</a>
+    {% endif %}
+  </nav>
 {% endif %}
