--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -1,4 +1,7 @@
-{% if cart.empty? %}
+<script>
+  console.log('cart:', {{ cart | json }}, '(via template-cart)' );
+</script>
+{% unless cart.empty? %}
   <h1>Your cart</h1>
   <div><a href="{{ routes.all_products_collection_url }}">Continue shopping</a></div>
   <div>
@@ -11,6 +14,9 @@
         </thead>
         <tbody>
           {% for item in cart.items %}
+            <script>
+              console.log({{ cart.items | json }}, '(via template-cart)' );
+            </script>
             <tr>
               <td>
                 <a href="{{ item.url }}">
@@ -28,6 +34,6 @@
     </form>
   </div>
 {% else %}
-  <p>no items</p>
+  <p>no items 😭</p>
   <div><a href="{{ routes.all_products_collection_url }}">Start shopping</a></div>
-{% endif %}
+{% endunless %}
