--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -1,13 +1,10 @@
 {% case media.media_type %}
   {% when 'image' %}
-    <img src="{{ media | image_url: width: 450 }}" alt="">
-
+    <img src="{{ media | image_url: width: 450 }}" alt="" width="450" height="200">
   {% when 'external_video' %}
-    {% comment %} {{ media | external_video_tag }} {% endcomment %}
-
+    {{ media | external_video_tag }}
   {% when 'video' %}
     {{ media | video_tag: controls: true }}
-
   {% else %}
 
 {% endcase %}
